--- a/app/src/main/res/layout/content_loaded_wallet.xml
+++ b/app/src/main/res/layout/content_loaded_wallet.xml
@@ -1,4 +1,5 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<fragment
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/loaded_wallet_fragment"
@@ -6,4 +7,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:layout="@layout/fragment_loaded_wallet" />
+    tools:layout="@layout/fr_loaded_wallet"/>
