--- a/app/src/main/res/layout/dialog_fingerprint_confirmation.xml
+++ b/app/src/main/res/layout/dialog_fingerprint_confirmation.xml
@@ -1,30 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <ImageView
         android:layout_width="96dp"
         android:layout_height="96dp"
-        android:src="@mipmap/ic_fp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        android:src="@mipmap/ic_fp"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Touch fingerprint scanner to confirm"
         android:layout_gravity="center_horizontal"
-        android:textSize="@dimen/font_normal"
         android:layout_margin="16dp"
+        android:text="Touch fingerprint scanner to confirm"
         android:textAlignment="center"
-    />
+        android:textSize="@dimen/font_normal"/>
+
     <ProgressBar
         android:id="@+id/login_progress"
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:visibility="gone" />
-
+        android:visibility="gone"/>
 
 </LinearLayout>
