--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.tangem.wallet.com.tangem.presentation.activity.MainActivity">
+    tools:context="com.tangem.presentation.activity.MainActivity">
 
     <!--<ImageView-->
     <!--android:id="@+id/ivTap"-->
@@ -37,7 +38,7 @@
                     android:id="@+id/imSmartphone"
                     android:layout_width="75dp"
                     android:layout_height="150dp"
-                    app:srcCompat="@drawable/smartphone" />
+                    app:srcCompat="@drawable/smartphone"/>
 
             </LinearLayout>
 
@@ -82,7 +83,7 @@
                     android:id="@+id/imHand"
                     android:layout_width="190dp"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/hand_card" />
+                    app:srcCompat="@drawable/hand_card"/>
             </LinearLayout>
 
         </RelativeLayout>
@@ -102,7 +103,7 @@
             android:textAllCaps="false"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@color/primary_dark"
-            android:textSize="18dp" />
+            android:textSize="18dp"/>
 
     </LinearLayout>
 
@@ -110,7 +111,7 @@
         android:id="@+id/include2"
         layout="@layout/content_main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"/>
 
 
     <FrameLayout
@@ -136,7 +137,7 @@
             android:layout_height="64dp"
             android:layout_margin="10dp"
             android:src="@drawable/ic_show_menu"
-            app:backgroundTint="@color/colorPrimary" />
+            app:backgroundTint="@color/colorPrimary"/>
 
         <!--<TextView-->
         <!--android:layout_width="wrap_content"-->
