--- a/app/src/main/res/layout/activity_confirm_payment.xml
+++ b/app/src/main/res/layout/activity_confirm_payment.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.tangem.wallet.com.tangem.presentation.activity.ConfirmPaymentActivity">
+    tools:context="com.tangem.presentation.activity.ConfirmPaymentActivity">
 
     <TextView
         android:id="@+id/textView"
@@ -19,7 +20,7 @@
         android:textSize="@dimen/font_large"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
     <LinearLayout
@@ -43,7 +44,7 @@
             android:fontFamily="@font/raleway_r"
             android:text="From banknote"
             android:textColor="@color/primary"
-            android:textSize="@dimen/font_normal" />
+            android:textSize="@dimen/font_normal"/>
 
         <TextView
             android:id="@+id/tvCardID"
@@ -55,7 +56,7 @@
             android:text="    "
             android:textColor="@color/black"
             android:textSize="@dimen/font_normal"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -65,7 +66,7 @@
             android:fontFamily="@font/raleway_r"
             android:text="with balance"
             android:textColor="@color/primary"
-            android:textSize="@dimen/font_normal" />
+            android:textSize="@dimen/font_normal"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -83,7 +84,7 @@
                 android:text="    "
                 android:textColor="@color/black"
                 android:textSize="@dimen/font_normal"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/tvBalanceEquivalent"
@@ -94,7 +95,7 @@
                 android:fontFamily="@font/montserrat_light"
                 android:text="   "
                 android:textColor="@android:color/darker_gray"
-                android:textSize="14dp" />
+                android:textSize="14dp"/>
         </LinearLayout>
 
 
@@ -117,7 +118,7 @@
                 android:textSize="@dimen/font_normal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"/>
         </android.support.constraint.ConstraintLayout>
 
         <EditText
@@ -134,7 +135,7 @@
             android:padding="12dp"
             android:textColor="@color/black"
             android:textSize="14dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -152,7 +153,7 @@
                 android:textSize="@dimen/font_normal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <TextView
                 android:id="@+id/textView12"
@@ -165,7 +166,7 @@
                 android:textColor="@color/primary"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="@+id/textView3"
-                app:layout_constraintLeft_toRightOf="@+id/textView3" />
+                app:layout_constraintLeft_toRightOf="@+id/textView3"/>
 
         </android.support.constraint.ConstraintLayout>
 
@@ -195,7 +196,7 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toLeftOf="@+id/tvCurrency"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <TextView
                 android:id="@+id/tvCurrency"
@@ -208,7 +209,7 @@
                 android:textSize="24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/tvAmountEquivalent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <TextView
                 android:id="@+id/tvAmountEquivalent"
@@ -222,7 +223,7 @@
                 android:textSize="14dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"/>
 
         </android.support.constraint.ConstraintLayout>
 
@@ -253,7 +254,7 @@
                 android:textSize="@dimen/font_normal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <!--<RadioGroup-->
             <!--android:id="@+id/rgFee"-->
@@ -292,16 +293,16 @@
 
             <!--</RadioGroup>-->
             <info.hoang8f.android.segmented.SegmentedGroup xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/rgFee"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:checkedButton="@+id/rbNormalFee"
-                android:gravity="center"
-                android:orientation="horizontal"
-                app:sc_border_width="2dp"
-                app:sc_corner_radius="10dp"
-                app:sc_tint_color="@color/colorPrimary">
+                                                           android:id="@+id/rgFee"
+                                                           android:layout_width="match_parent"
+                                                           android:layout_height="wrap_content"
+                                                           android:layout_margin="10dp"
+                                                           android:checkedButton="@+id/rbNormalFee"
+                                                           android:gravity="center"
+                                                           android:orientation="horizontal"
+                                                           app:sc_border_width="2dp"
+                                                           app:sc_corner_radius="10dp"
+                                                           app:sc_tint_color="@color/colorPrimary">
 
                 <RadioButton
                     android:id="@+id/rbMinimalFee"
@@ -310,7 +311,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/raleway_r"
                     android:text="Minimal"
-                    android:textSize="18dp" />
+                    android:textSize="18dp"/>
 
                 <RadioButton
                     android:id="@+id/rbNormalFee"
@@ -319,7 +320,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/raleway_r"
                     android:text="Normal"
-                    android:textSize="18dp" />
+                    android:textSize="18dp"/>
 
                 <RadioButton
                     android:id="@+id/rbMaximumFee"
@@ -328,7 +329,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/raleway_r"
                     android:text="Priority"
-                    android:textSize="18dp" />
+                    android:textSize="18dp"/>
             </info.hoang8f.android.segmented.SegmentedGroup>
 
         </LinearLayout>
@@ -356,7 +357,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_min="150dp" />
+                app:layout_constraintWidth_min="150dp"/>
 
             <TextView
                 android:id="@+id/tvCurrency2"
@@ -370,7 +371,7 @@
                 android:textSize="18dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/etFee"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <TextView
                 android:id="@+id/tvFeeEquivalent"
@@ -383,7 +384,7 @@
                 android:textSize="14dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/tvCurrency2"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"/>
 
 
         </android.support.constraint.ConstraintLayout>
@@ -404,7 +405,7 @@
         android:textSize="@dimen/font_large"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -418,6 +419,6 @@
         android:visibility="invisible"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/llFee" />
+        app:layout_constraintTop_toTopOf="@+id/llFee"/>
 
 </android.support.constraint.ConstraintLayout>
