--- a/app/src/main/res/layout/activity_create_new_wallet.xml
+++ b/app/src/main/res/layout/activity_create_new_wallet.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.tangem.wallet.com.tangem.presentation.activity.CreateNewWalletActivity">
+    tools:context="com.tangem.presentation.activity.CreateNewWalletActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_centerVertical="true"
-        >
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
@@ -18,7 +19,7 @@
             android:fontFamily="@font/raleway_r"
             android:text="Now touch the banknote with ID"
             android:textAlignment="center"
-            android:textSize="@dimen/font_normal" />
+            android:textSize="@dimen/font_normal"/>
 
         <TextView
             android:id="@+id/tvCardID"
@@ -30,7 +31,7 @@
             android:text="           "
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="@dimen/font_large" />
+            android:textSize="@dimen/font_large"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -38,8 +39,9 @@
             android:fontFamily="@font/raleway_r"
             android:text="to create the wallet"
             android:textAlignment="center"
-            android:textSize="@dimen/font_normal" />
+            android:textSize="@dimen/font_normal"/>
     </LinearLayout>
+
     <ProgressBar
         android:id="@+id/progressBar"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
@@ -49,8 +51,6 @@
         android:layout_marginBottom="6dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        app:layout_constraintBottom_toBottomOf="parent" />
-
-
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </RelativeLayout>
