--- a/app/src/main/res/layout/activity_empty_wallet.xml
+++ b/app/src/main/res/layout/activity_empty_wallet.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,21 +8,21 @@
     android:background="@color/white"
     android:orientation="vertical"
     android:padding="0dp"
-    tools:context="com.tangem.wallet.com.tangem.presentation.activity.EmptyWalletActivity">
+    tools:context="com.tangem.presentation.activity.EmptyWalletActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp">
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:background="@color/white"
             android:gravity="center_vertical"
             android:orientation="vertical"
-            android:layout_centerInParent="true"
             android:padding="8dp">
 
             <TextView
@@ -31,8 +32,8 @@
                 android:fontFamily="@font/raleway_r"
                 android:gravity="center_vertical"
                 android:text="Wallet hasn’t been yet created"
-                android:textSize="@dimen/empty_wallet_font_normal"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:textSize="@dimen/empty_wallet_font_normal"/>
 
             <Button
                 android:id="@+id/btnNewWallet"
@@ -45,7 +46,7 @@
                 android:text="Create Wallet"
                 android:textColor="@color/white"
                 android:textSize="18dp"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
             <!--<LinearLayout-->
             <!--android:layout_width="match_parent"-->
@@ -129,11 +130,11 @@
                 <TextView
                     android:layout_width="@dimen/empty_wallet_left_col_width"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/empty_wallet_left_col_margin"
                     android:fontFamily="@font/raleway_r"
                     android:text="Blockchain"
-                    android:textSize="@dimen/empty_wallet_font_normal"
-                    android:layout_marginLeft="@dimen/empty_wallet_left_col_margin"
-                    android:textColor="@color/primary_dark" />
+                    android:textColor="@color/primary_dark"
+                    android:textSize="@dimen/empty_wallet_font_normal"/>
 
                 <TextView
                     android:id="@+id/tvBlockchain"
@@ -141,10 +142,11 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/montserrat_light"
                     android:text="                "
-                    android:textSize="@dimen/empty_wallet_font_normal"
                     android:textColor="@color/primary_dark"
-                    android:textStyle="normal|bold" />
+                    android:textSize="@dimen/empty_wallet_font_normal"
+                    android:textStyle="normal|bold"/>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -153,11 +155,11 @@
                 <TextView
                     android:layout_width="@dimen/empty_wallet_left_col_width"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/empty_wallet_left_col_margin"
                     android:fontFamily="@font/raleway_r"
                     android:text="Issuer"
-                    android:layout_marginLeft="@dimen/empty_wallet_left_col_margin"
-                    android:textSize="@dimen/empty_wallet_font_normal"
-                    android:textColor="@color/primary_dark" />
+                    android:textColor="@color/primary_dark"
+                    android:textSize="@dimen/empty_wallet_font_normal"/>
 
                 <TextView
                     android:id="@+id/tvIssuer"
@@ -165,9 +167,9 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/montserrat_light"
                     android:text="                "
-                    android:textSize="@dimen/empty_wallet_font_normal"
                     android:textColor="@color/primary_dark"
-                    android:textStyle="normal|bold" />
+                    android:textSize="@dimen/empty_wallet_font_normal"
+                    android:textStyle="normal|bold"/>
             </LinearLayout>
 
             <LinearLayout
@@ -178,9 +180,9 @@
                 <TextView
                     android:layout_width="@dimen/empty_wallet_left_col_width"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/raleway_r"
                     android:layout_marginLeft="@dimen/empty_wallet_left_col_margin"
-                    android:text="" />
+                    android:fontFamily="@font/raleway_r"
+                    android:text=""/>
 
                 <TextView
                     android:id="@+id/tvIssuerData"
@@ -189,32 +191,32 @@
                     android:fontFamily="@font/montserrat_light"
                     android:text="                "
                     android:textSize="@dimen/empty_wallet_font_normal"
-                    android:textStyle="normal|bold" />
+                    android:textStyle="normal|bold"/>
             </LinearLayout>
 
             <!--<LinearLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:gravity="center_vertical"-->
-                <!--android:orientation="horizontal">-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:orientation="horizontal">-->
 
-                <!--<TextView-->
-                    <!--android:layout_width="110dp"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_marginLeft="15dp"-->
-                    <!--android:fontFamily="@font/raleway_r"-->
-                    <!--android:text="Card ID" />-->
+            <!--<TextView-->
+            <!--android:layout_width="110dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginLeft="15dp"-->
+            <!--android:fontFamily="@font/raleway_r"-->
+            <!--android:text="Card ID" />-->
 
-                <!--<TextView-->
-                    <!--android:id="@+id/tvCardID"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_alignParentBottom="true"-->
-                    <!--android:layout_weight="1"-->
-                    <!--android:elevation="1dp"-->
-                    <!--android:fontFamily="@font/montserrat_light"-->
-                    <!--android:text="XXXX XXXX XXXX XXXX"-->
-                    <!--android:textAlignment="textStart" />-->
+            <!--<TextView-->
+            <!--android:id="@+id/tvCardID"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentBottom="true"-->
+            <!--android:layout_weight="1"-->
+            <!--android:elevation="1dp"-->
+            <!--android:fontFamily="@font/montserrat_light"-->
+            <!--android:text="XXXX XXXX XXXX XXXX"-->
+            <!--android:textAlignment="textStart" />-->
 
             <!--</LinearLayout>-->
 
@@ -261,7 +263,7 @@
                 android:textAlignment="center"
                 android:textColor="@color/primary_dark"
                 android:textSize="@dimen/empty_wallet_font_normal"
-                android:textStyle="normal|bold" />
+                android:textStyle="normal|bold"/>
 
             <TextView
                 android:id="@+id/textView5"
@@ -273,8 +275,9 @@
                 android:text="Scan again to verify the card"
                 android:textAlignment="center"
                 android:textColor="@android:color/darker_gray"
-                android:textSize="@dimen/empty_wallet_font_small" />
+                android:textSize="@dimen/empty_wallet_font_small"/>
         </LinearLayout>
+
         <ImageView
             android:id="@+id/imgBlockchain"
             android:layout_width="32dp"
@@ -283,7 +286,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
-            android:src="@drawable/tangem_logo_small_new" />
+            android:src="@drawable/tangem_logo_small_new"/>
 
         <ImageView
             android:id="@+id/imgPIN"
@@ -294,7 +297,7 @@
             android:layout_margin="8dp"
             android:layout_marginRight="4dp"
             android:layout_toLeftOf="@+id/imgPIN2orSecurityDelay"
-            android:src="@drawable/unlock_pin1" />
+            android:src="@drawable/unlock_pin1"/>
 
         <ImageView
             android:id="@+id/imgPIN2orSecurityDelay"
@@ -305,7 +308,7 @@
             android:layout_alignParentStart="false"
             android:layout_marginBottom="8dp"
             android:layout_marginRight="8dp"
-            android:src="@drawable/unlock_pin2" />
+            android:src="@drawable/unlock_pin2"/>
 
         <ImageView
             android:id="@+id/imgDeveloperVersion"
@@ -315,7 +318,7 @@
             android:layout_alignParentStart="true"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
-            android:src="@drawable/ic_developer_version" />
+            android:src="@drawable/ic_developer_version"/>
 
     </RelativeLayout>
 
@@ -329,7 +332,6 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
+        app:layout_constraintRight_toRightOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
