--- a/app/src/main/res/layout/activity_qrscan.xml
+++ b/app/src/main/res/layout/activity_qrscan.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.tangem.wallet.com.tangem.presentation.activity.QRScanActivity">
+    tools:context="com.tangem.presentation.activity.QRScanActivity">
 
 </android.support.constraint.ConstraintLayout>
