--- a/app/src/main/res/layout/activity_request_pin.xml
+++ b/app/src/main/res/layout/activity_request_pin.xml
@@ -1,10 +1,11 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context="com.tangem.wallet.com.tangem.presentation.activity.RequestPINActivity">
+    tools:context="com.tangem.presentation.activity.RequestPINActivity">
     <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
     <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
     <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
@@ -12,16 +13,16 @@
 
     <!-- Login progress -->
     <!--<android.support.design.widget.AppBarLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:theme="@style/AppTheme.AppBarOverlay">-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:theme="@style/AppTheme.AppBarOverlay">-->
 
-        <!--<android.support.v7.widget.Toolbar-->
-            <!--android:id="@+id/toolbar"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="45dp"-->
-            <!--android:background="?attr/colorPrimary"-->
-            <!--app:popupTheme="@style/AppTheme.PopupOverlay" />-->
+    <!--<android.support.v7.widget.Toolbar-->
+    <!--android:id="@+id/toolbar"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="45dp"-->
+    <!--android:background="?attr/colorPrimary"-->
+    <!--app:popupTheme="@style/AppTheme.PopupOverlay" />-->
 
     <!--</android.support.design.widget.AppBarLayout>-->
 
@@ -46,10 +47,10 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="numberPassword"
+            android:paddingBottom="16dp"
             android:singleLine="false"
             android:textAlignment="center"
-            android:paddingBottom="16dp"
-            android:textSize="36sp" />
+            android:textSize="36sp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -60,19 +61,20 @@
                 android:id="@+id/imgFingerprint"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@mipmap/ic_fp"
                 android:layout_marginEnd="16dp"
+                android:background="@mipmap/ic_fp"
                 />
+
             <TextView
                 android:id="@+id/pin_prompt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:ems="10"
                 android:fontFamily="@font/raleway_el"
                 android:text="@string/prompt_pin"
                 android:textAlignment="center"
-                android:layout_gravity="center"
-                android:textSize="18dp" />
+                android:textSize="18dp"/>
         </LinearLayout>
 
 
@@ -81,12 +83,12 @@
             android:layout_height="match_parent">
 
             <GridLayout
+                android:id="@+id/gridLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:columnCount="3"
-                android:rowCount="4"
-                android:id="@+id/gridLayout">
+                android:rowCount="4">
 
                 <Button
                     android:id="@+id/btn1"
@@ -98,7 +100,7 @@
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/montserrat_light"
                     android:text="1"
-                    android:textSize="32dp" />
+                    android:textSize="32dp"/>
 
                 <Button
                     android:id="@+id/btn2"
@@ -108,7 +110,7 @@
                     android:layout_marginTop="@dimen/pin_button_top_margin"
                     android:fontFamily="@font/montserrat_light"
                     android:text="2"
-                    android:textSize="32dp" />
+                    android:textSize="32dp"/>
 
                 <Button
                     android:id="@+id/btn3"
@@ -118,7 +120,7 @@
                     android:layout_marginTop="@dimen/pin_button_top_margin"
                     android:fontFamily="@font/montserrat_light"
                     android:text="3"
-                    android:textSize="32dp" />
+                    android:textSize="32dp"/>
 
                 <Button
                     android:id="@+id/btn4"
@@ -128,7 +130,7 @@
                     android:layout_marginTop="@dimen/pin_button_top_margin"
                     android:fontFamily="@font/montserrat_light"
                     android:text="4"
-                    android:textSize="32dp" />
+                    android:textSize="32dp"/>
 
                 <Button
                     android:id="@+id/btn5"
@@ -138,7 +140,7 @@
                     android:layout_marginTop="@dimen/pin_button_top_margin"
                     android:fontFamily="@font/montserrat_light"
                     android:text="5"
-                    android:textSize="32dp" />
+                    android:textSize="32dp"/>
 
                 <Button
                     android:id="@+id/btn6"
@@ -148,7 +150,7 @@
                     android:layout_marginTop="@dimen/pin_button_top_margin"
                     android:fontFamily="@font/montserrat_light"
                     android:text="6"
-                    android:textSize="32dp" />
+                    android:textSize="32dp"/>
 
                 <Button
                     android:id="@+id/btn7"
@@ -158,7 +160,7 @@
                     android:layout_marginTop="@dimen/pin_button_top_margin"
                     android:fontFamily="@font/montserrat_light"
                     android:text="7"
-                    android:textSize="32dp" />
+                    android:textSize="32dp"/>
 
                 <Button
                     android:id="@+id/btn8"
@@ -168,7 +170,7 @@
                     android:layout_marginTop="@dimen/pin_button_top_margin"
                     android:fontFamily="@font/montserrat_light"
                     android:text="8"
-                    android:textSize="32dp" />
+                    android:textSize="32dp"/>
 
                 <Button
                     android:id="@+id/btn9"
@@ -178,9 +180,9 @@
                     android:layout_marginTop="@dimen/pin_button_top_margin"
                     android:fontFamily="@font/montserrat_light"
                     android:text="9"
-                    android:textSize="32dp" />
+                    android:textSize="32dp"/>
 
-                <Space />
+                <Space/>
 
                 <Button
                     android:id="@+id/btn0"
@@ -190,7 +192,7 @@
                     android:layout_marginTop="@dimen/pin_button_top_margin"
                     android:fontFamily="@font/montserrat_light"
                     android:text="0"
-                    android:textSize="32dp" />
+                    android:textSize="32dp"/>
 
                 <Button
                     android:id="@+id/btnBackspace"
@@ -201,7 +203,7 @@
                     android:fontFamily="@font/montserrat_light"
                     android:text="&lt;"
                     android:textColor="@color/accent"
-                    android:textSize="32dp" />
+                    android:textSize="32dp"/>
 
             </GridLayout>
 
@@ -218,18 +220,18 @@
                 android:text="OK"
                 android:textColor="@color/white"
                 android:textSize="@dimen/font_large"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
         </RelativeLayout>
 
     </LinearLayout>
 
     <!--<ProgressBar-->
-        <!--android:id="@+id/login_progress"-->
-        <!--style="?android:attr/progressBarStyleLarge"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginBottom="8dp"-->
-        <!--android:visibility="gone" />-->
+    <!--android:id="@+id/login_progress"-->
+    <!--style="?android:attr/progressBarStyleLarge"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginBottom="8dp"-->
+    <!--android:visibility="gone" />-->
 
 
 </LinearLayout>
