--- a/app/src/main/res/layout/activity_select_blockchain.xml
+++ b/app/src/main/res/layout/activity_select_blockchain.xml
@@ -1,8 +1,12 @@
-<LinearLayout android:layout_height="match_parent" android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvBlockchain"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/rvBlockchain">
+        android:layout_height="match_parent">
     </android.support.v7.widget.RecyclerView>
+
 </LinearLayout>
