--- a/app/src/main/res/layout/activity_verify_card.xml
+++ b/app/src/main/res/layout/activity_verify_card.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.tangem.wallet.com.tangem.presentation.activity.VerifyCardActivity">
-
+    tools:context="com.tangem.presentation.activity.VerifyCardActivity">
 
     <include
         layout="@layout/content_verify_card"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent" />
-
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </android.support.design.widget.CoordinatorLayout>
