--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+<menu
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:title="Clean up"  android:id="@+id/cleanCards"/>
-    <item android:title="Manage user PIN1..." android:id="@+id/managePIN" android:enabled="false"/>
-    <item android:title="Manage user PIN2..." android:id="@+id/managePIN2" android:enabled="false"/>
-    <item android:title="Send logs..."  android:id="@+id/sendLogs" android:visible="false"/>
-    <!--<item android:title="Switch to another blockchain host"  android:id="@+id/switchToAnotherBitcoinHost" android:visible="false"/>-->
-    <item android:title="About..."  android:id="@+id/about"/>
+    <item
+        android:id="@+id/cleanCards"
+        android:title="@string/clean_up"/>
+    <item
+        android:id="@+id/managePIN"
+        android:enabled="false"
+        android:title="@string/manage_user_pin_1"/>
+    <item
+        android:id="@+id/managePIN2"
+        android:enabled="false"
+        android:title="@string/manage_user_pin_2"/>
+    <item
+        android:id="@+id/sendLogs"
+        android:title="@string/send_logs"
+        android:visible="false"/>
+
+    <!--<item-->
+        <!--android:id="@+id/switchToAnotherBitcoinHost"-->
+        <!--android:title="Switch to another blockchain host"-->
+        <!--android:visible="false"/>-->
+
+    <item
+        android:id="@+id/about"
+        android:title="@string/about"/>
 </menu>
