--- a/app/src/main/res/layout/item_list_card.xml
+++ b/app/src/main/res/layout/item_list_card.xml
@@ -68,7 +68,7 @@
                 android:maxLines="1"
                 android:textColor="@color/black"
                 android:textSize="12sp"
-                tools:text="          DEVELOPER     KIT     "/>
+                tools:text="@string/developer_kit"/>
 
         </FrameLayout>
 
